<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="118dp"
        android:layout_height="67dp"
        android:layout_marginStart="131dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="16dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="112dp"
        android:layout_height="69dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="225dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input">

        <RadioButton
            android:id="@+id/manRadioButton"
            android:layout_width="109dp"
            android:layout_height="32dp"
            android:backgroundTint="#3F51B5"
            android:buttonTint="#2870AA"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/womanRadioButton"
            android:layout_width="109dp"
            android:layout_height="32dp"
            android:backgroundTint="#3F51B5"
            android:buttonTint="#2870AA"
            android:text="@string/woman" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="29dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="16dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="69dp"
        android:layout_height="29dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="27dp"
        android:text="@string/height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

    <TextView
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="135dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="135dp"
        android:text="@string/intup_you_r_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/activeGroup"
        android:layout_width="231dp"
        android:layout_height="99dp"
        android:layout_marginStart="89dp"
        android:layout_marginBottom="292dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/lowID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_activity" />

        <RadioButton
            android:id="@+id/heightID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height_activity" />

        <RadioButton
            android:id="@+id/normalD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/normal_activity" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="77dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="80dp"
        android:text="@string/age"
        app:layout_constraintBottom_toTopOf="@+id/activeGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/genderGroup" />

    <EditText
        android:id="@+id/weightID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="40dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/activeGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>
